3.8.2
- Zend Framework was updated to 1.11.3
- CKEditor was updated to 3.5.1
- P4A_Dir_Source automatically sorts files

3.8.1
- jQuery was updated to 1.4.4
- a bug with multiple p4a_load_js calls (with the same url and within the
  same loading cycle) was solved
- a bug with MSSQL and query limits was fixed (thanks to Diego Fattori)
- CKEditor was updated to 3.5
- P4A_DB_Source::getRowPosition() now returns 1 if the query throws an error
- P4A_DB_Source::addHaving(), setHaving() and getHaving() methods were added
- Zend Framework was updated to 1.11.2
- a bug with P4A::restart() method was fixed (thanks to Daniel Carrero)
- a bug with P4A_Data_Source::saveUploads() and custom file paths was solved
- a new technique to unload CKEditor was implemented

3.8.0
- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
- P4A_DB's connection charset is now set to UTF 8
  This could lead to possible data corruption, if you're upgrading from a
  previous release and you're using MySQL or PostgreSQL (Oracle and SQLite
  should not be involved in this change) you've to be sure to convert the DB
  charset to UTF-8 before editing data in your P4A applications.
  
  ALWAYS DO BACKUPS BEFORE ANYTHING ELSE!!!
  
  For MySQL we used this procedure to migrate our DBs:
  mysqldump --default-character-set=latin1 DBNAME > dump.sql
  open dump.sql and replace this line
  /*!40101 SET NAMES latin1 */;
  with
  /*!40101 SET NAMES utf8 */;
  mysql NEWDBNAME < dump.sql
- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
- Support For MS SQL was added, check out the README file
- AJAX STACK REVERTED TO XML (instead of JSON) due to the bugs with jQuery::form
- README file was updated
- CKEditor was updated to 3.4.1