@@ -2,6 +2,8 @@
 - Zend Framework was updated to 1.11.3
 - CKEditor was updated to 3.5.1
 - P4A_Dir_Source automatically sorts files
+- P4A_Dir_Source::setPageLimit() calling was disabled
+- P4A_Dir_Source's page limit is now set to 0 (disabled)
 
 3.8.1
 - jQuery was updated to 1.4.4
